Slightly improved add proposition form.

--- a/templates/wagers/propositions/snippets/add_form.html
+++ b/templates/wagers/propositions/snippets/add_form.html
@@ -45,7 +45,7 @@
       <input type="checkbox" name="schedule_toggle" {% if add_prop_form.schedule_toggle.value %}checked="{{ add_prop_form.schedule_toggle.value }}"{% endif %}/> I would like to schedule when the prop opens and closes instead of handling it manually.
     </label>
     <div id="schedule">
-      <span class="help-block">Make sure to set both times right if you want to schedule things. If you don't set the closing time it might instantly close the proposition to further betting.</span>
+      <span class="help-block">Make sure to set both times. Not setting a closing time will instantly close the prop.</span>
       <div class="row-fluid">
         <div class="span4">
           <label>Open Wager At</label>
