--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,6 +1,8 @@
 {% extends "scaffolding.html" %}
 {% block content %}
-{% with legend="Sign In"%}
-{% include 'registration/snippets/login_form.html' %}
-{% endwith %}
+<div class="container">
+	{% with legend="Sign In"%}
+	{% include 'registration/snippets/login_form.html' %}
+	{% endwith %}
+</div>
 {% endblock %}
