--- a/templates/wagers/propositions/bet.html
+++ b/templates/wagers/propositions/bet.html
@@ -1,6 +1,8 @@
 {% extends 'scaffolding.html' %}
 {% block content %}
-<form>
-{{ form }}
-</form>
+<div class="container">
+  <form>
+  {{ form }}
+  </form>
+</div>
 {% endblock %}
