--- a/templates/wagers/tournaments/open-list.html
+++ b/templates/wagers/tournaments/open-list.html
@@ -1,10 +1,12 @@
 {% extends "scaffolding.html" %}
 {% block content %}
-<ol class="unstyled">
-  {% for tourney in tournaments %}
-    <li><a href="{{ tourney.get_absolute_url }}">{{ tourney }}</a> created by {{ tourney.created_by }} on {{ tourney.created_on }}</li>
-  {% empty %}
-    <li>There are no open tournaments.</li>
-  {% endfor %}
-</ol>
+<div class="container">
+  <ol class="unstyled">
+    {% for tourney in tournaments %}
+      <li><a href="{{ tourney.get_absolute_url }}">{{ tourney }}</a> created by {{ tourney.created_by }} on {{ tourney.created_on }}</li>
+    {% empty %}
+      <li>There are no open tournaments.</li>
+    {% endfor %}
+  </ol>
+</div>
 {% endblock %}
