Fixed an issue with the footer that was causing overlap.

--- a/templates/scaffolding.html
+++ b/templates/scaffolding.html
@@ -51,6 +51,7 @@
         {% endfor %}
       </div>
       {% block content %}{% endblock %}
+      <div id="footer_push"><!--Hack for sticky footer !--></div>
     </div>
 
     <footer>
