--- a/templates/wagers/home.html
+++ b/templates/wagers/home.html
@@ -19,16 +19,18 @@
 </div>
 {% if perms.EditableHTML.change_editablehtml %}
 <hr>
-<div class="page-header">
-  <h1>Admin View<small>Only admins can see the form below</small></h1>
+<div class="container">
+  <div class="page-header">
+    <h1>Admin View<small>Only admins can see the form below</small></h1>
+  </div>
+  <form action="" method="POST">{% csrf_token %}
+    <textarea name="html">{{html.html}}</textarea>
+    <br>
+    <input type="submit" value="Change Homepage HTML content">
+  </form>
 </div>
-<form action="" method="POST">{% csrf_token %}
-  <textarea name="html">{{html.html}}</textarea>
-  <br>
-  <input type="submit" value="Change Homepage HTML content">
-</form>
 {% endif %}
-
+<hr>
 <div class="container">
   {{html.html|safe}}
 </div>
