--- a/templates/wagers/tournaments/details.html
+++ b/templates/wagers/tournaments/details.html
@@ -17,7 +17,7 @@
     </ul>
   {% endif %}
   <p>Right now you have: {{ player.credits }} credit{{ player.credits|pluralize }}.</p>
-  <h2>Propositions <small>Open For Betting</small></h2>
+  <h2>Propositions <small>You Can Bet On</small></h2>
   <ul class="unstyled">
   {% for prop in bettable_props %}
     <li>{% include "wagers/propositions/snippets/prop.html" %}</li>
@@ -25,11 +25,52 @@
     <li>There are no props open for betting.</li>
   {% endfor %}
   </ul>
+  <h2>Propositions <small>You've Already Bet On</small></h2>
+       <table class="table">
 
-  {% for bet in bets %}
-    {{ bet }}
-  {% empty %}
-    <p>You haven't made any bets yet.</p>
-  {% endfor %}
+    {% for bet in bets %}
+        {% if bet.proposition.is_paid %}
+          <tr class="alert {% if bet.is_won %}alert-success{% else %}alert-error{% endif %}">
+            <td>
+              <h3>Prop</h3>
+              <b>{{ bet.proposition }}</b>
+            </td>
+            <td>
+              <h3>Your Position</h3>
+              <b>{{ bet.get_position }}</b>
+            </td>
+            <td >
+              <h3>Outcome</h3>
+              <b><b>{% if bet.is_won %}Won{% else %}Lost{% endif %}</b></b>
+            </td>
+            <td class="table-button">
+              <a class="btn {% if bet.is_won %}btn-success{% else %}btn-danger{% endif %} href="#details">Show Details</a>
+            </td>
+          </tr>
+          
+        {% else %}
+          <tr class="alert alert-warning">
+            <td>
+              <h3>Prop</h3>
+              <b>{{ bet.proposition }}</b>
+            </td>
+            <td>
+              <h3>Your Position</h3>
+              <b>{{ bet.get_position }}</b>
+            </td>
+            <td >
+              <h3>Outcome</h3>
+              <b>Ongoing...</b>
+            </td>
+            <td class="table-button">
+              <a class="btn btn-warning" href="#details">Show Details</a>
+            </td>
+          </tr>
+        {% endif %}
+    {% empty %}
+      <li>You haven't made any bets yet.</li>
+    {% endfor %}
+  </table>
+>
 </div>
 {% endblock %}
